syntax = "proto3";

package api;

import "google/api/annotations.proto";

message PostgreSQLNode {
    reserved 1, 2; // id and type

    string name = 3;
}

message PostgreSQLService {
    reserved 1, 2, 3; // id, type, and node_id

    string address = 4;
    uint32 port = 5;
    string engine = 6;
    string engine_version = 7;
}

message PostgreSQLInstance {
    PostgreSQLNode node = 1;
    PostgreSQLService service = 2;
}

message PostgreSQLListRequest {
}

message PostgreSQLListResponse {
    repeated PostgreSQLInstance instances = 1;
}

message PostgreSQLAddRequest {
    string name = 1;
    string address = 2;
    uint32 port = 3;
    string username = 4;
    string password = 5;
}

message PostgreSQLAddResponse {
    int32 id = 1;
}

message PostgreSQLRemoveRequest {
    int32 id = 1;
}

message PostgreSQLRemoveResponse {
}

service PostgreSQL {
    rpc List(PostgreSQLListRequest) returns (PostgreSQLListResponse) {
        option (google.api.http) = {
            get: "/v0/postgresql"
        };
    }

    rpc Add(PostgreSQLAddRequest) returns (PostgreSQLAddResponse) {
        option (google.api.http) = {
            post: "/v0/postgresql"
            body: "*"
        };
    }

    rpc Remove(PostgreSQLRemoveRequest) returns (PostgreSQLRemoveResponse) {
        option (google.api.http) = {
            delete: "/v0/postgresql/{id}"
        };
    }
}
